# agent-judge-optimization

./: .envrc.example  .gitignore  README.md  config.json.example  pyproject.toml  setup.py  vertex_config.json.example
src/expforge/: __init__.py  cli.py  config.py  datasets.py
src/expforge/data/: __init__.py  gcs_utils.py  io.py  mnist.py  triple_mnist.py  util.py
src/expforge/model/: __init__.py  checkpoint.py  deploy.py
src/expforge/synthetic/: __init__.py  font_generator.py  triple_mnist_generator.py
src/expforge/training/: __init__.py  custom_job.py  data_utils.py  sklearn_classifier.py  train.py  triple_mnist_model.py  vertex_integration.py  vertex_train_script.py  vertex_training.py
src/expforge/vertex/: __init__.py  bucket.py  context.py  experiment.py  manager.py  metrics.py  run.py  tensorboard.py
src/expforge/visualization/: overview.py
